--- a/gallery/templates/base.html
+++ b/gallery/templates/base.html
@@ -14,6 +14,17 @@
   {% block styles %}
     {% bootstrap_css %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+
+<style type="text/css">
+  body { 
+   background: url('{% static "img/orange.jpg" %}') no-repeat center center fixed; 
+   background-size: cover;
+   color: white !important;
+   font-family: 'Rajdhani', sans-serif !important;
+  }
+</style>
+
   {% endblock %}
 
 </head>
