--- a/gallery/templates/base.html
+++ b/gallery/templates/base.html
@@ -1,4 +1,4 @@
-{% load bootstrap5 %}
+{% load bootstrap4 %}
 {% load static%}
 <!DOCTYPE html>
 <html>
@@ -13,6 +13,7 @@
 
   {% block styles %}
     {% bootstrap_css %}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
