--- a/gallery/templates/details.html
+++ b/gallery/templates/details.html
@@ -1,11 +1,10 @@
 {%extends 'base.html'%}
 {% block content %}
 {{ block.super}}
-{% load bootstrap5 %}
+{% load bootstrap4 %}
 <br>
 <br>
 <div class="container">
-
   <div class="card-columns">
 
     <div class="card border-secondary">
@@ -14,8 +13,7 @@
     <div class="card-body">
       <p>Details: {{image.description}}</p>
       <p class="description-body"><span class="badge"> <i class="fas fa-map-marker-alt"></i> {{image.location}}</span></p>
-      <small style="font-size: 12px" class="ml-45"><i class="far fa-clock"></i> {{image.post_date | timesince}} ago</small> 
-
+      <small style="font-size: 12px" class=""><i class="far fa-clock"></i> {{image.post_date | timesince}} ago</small> 
       {% for category in image.categories.all %}
       <p> Category: {{ category.cat_name }} </p>
       {% endfor %}
