add welcome  message

--- a/gallery/templates/index.html
+++ b/gallery/templates/index.html
@@ -5,7 +5,7 @@
 {{ block.super}}
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <br>
-<h3 align="center">Welcome to my Gallery. <br><span><small>You can click on an image you like to view more details.</small></span></h3><br>
+<h3 align="center">Welcome to my Gallery. <br><span><small>You can click on an image you like to view more details, <br> or search image by category (eg.crime,fiction..etc)</small></span></h3><br>
 <div class="container">
 
   <div class="card-columns">
@@ -18,52 +18,52 @@
 
 </div>
 
-<!-- Large modal -->
+
 {% for photo in photos %}
 
-<!-- Modal -->
-<div class="modal fade" id="extraModal{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="extra" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Title: {{photo.name}}</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-      </div>
+  <!-- Modal -->
+  <div class="modal fade" id="extraModal{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="extra" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Title: {{photo.name}}</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+        </div>
 
-      <div class="modal-body">
-        <img class="card-img-top" class="img-responsive" src="{{photo.image.url}}" size="100px200">
-        <p>Details: {{photo.description}}</p>
-        <p class="description-body"><span class="badge"> <i class="fas fa-map-marker-alt"></i> {{photo.location}}</span></p>
-        <small style="font-size: 12px" class="ml-45"><i class="far fa-clock"></i> {{photo.post_date | timesince}} ago</small> 
+        <div class="modal-body">
+          <img class="card-img-top" class="img-responsive" src="{{photo.image.url}}" size="100px200">
+          <p>Details: {{photo.description}}</p>
+          <p class="description-body"><span class="badge"> <i class="fas fa-map-marker-alt"></i> {{photo.location}}</span></p>
+          <small style="font-size: 12px" class="ml-45"><i class="far fa-clock"></i> {{photo.post_date | timesince}} ago</small> 
 
-        {% for category in image.categories.all %}
-        <p> Category: {{ category.cat_name }} </p>
-        {% endfor %}
+          {% for category in image.categories.all %}
+          <p> Category: {{ category.cat_name }} </p>
+          {% endfor %}
 
-        <!-- copy to clip board-->
+          <!-- copy to clip board-->
 
-        <button type="button" name="button" class="btn btn-info" value="{{photo.image.url}}" onclick="copylink(this.value)">Copy Image Link</button>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" name="button" class="btn btn-secondary" value="{{photo.image.url}}" onclick="copylink(this.value)">Copy Image Link</button>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
 
+        </div>
       </div>
     </div>
   </div>
-</div>
-<script>
-  function copylink(value) {
-      console.log('seen')
-      function handler(event){
-          event.clipboardData.setData('text/plain', value);
-          event.preventDefault();
-          document.removeEventListener('copy', handler, true);
-      }
-      document.addEventListener('copy', handler, true);
-      document.execCommand('copy');
-  }
-</script>
+  <script>
+    function copylink(value) {
+        console.log('seen')
+        function handler(event){
+            event.clipboardData.setData('text/plain', value);
+            event.preventDefault();
+            document.removeEventListener('copy', handler, true);
+        }
+        document.addEventListener('copy', handler, true);
+        document.execCommand('copy');
+    }
+  </script>
 
 {%endfor%}
 {% endblock %}
