--- a/gallery/templates/index.html
+++ b/gallery/templates/index.html
@@ -5,7 +5,7 @@
 {{ block.super}}
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <br>
-<h3 align="center">Welcome to my Gallery. <br><span><small>You can click on an image you like to view more details, <br> or search image by category (eg.crime,fiction..etc)</small></span></h3><br>
+<h3 align="center">Welcome to my Gallery. <br><span><small>You can click on an image you like to view more details, <br> or search image by category (eg.crime,fiction,journals,romantic..etc)</small></span></h3><br>
 <div class="container">
 
   <div class="card-columns">
