--- a/gallery/templates/index.html
+++ b/gallery/templates/index.html
@@ -35,9 +35,9 @@
           <img class="card-img-top" class="img-responsive" src="{{photo.image.url}}" size="100px200">
           <p>Details: {{photo.description}}</p>
           <p class="description-body"><span class="badge"> <i class="fas fa-map-marker-alt"></i> {{photo.location}}</span></p>
-          {% for category in categories.all %}
-          <p> Category: {{ category.cat_name }} </p>
-          {% endfor %}
+          <!-- {% for category in categories.all %} -->
+          <p> Category: {{ photo.category }} </p>
+          <!-- {% endfor %} -->
           <small style="font-size: 12px" class="ml-45"><i class="far fa-clock"></i> {{photo.post_date | timesince}} ago</small> 
           <!-- copy to clip board-->
 
