--- a/gallery/templates/index.html
+++ b/gallery/templates/index.html
@@ -9,9 +9,9 @@
 <div class="container">
 
   <div class="card-columns">
-    {% for photo in photos %}
+    {% for image in images %}
     <div class="card border-secondary">
-      <img class="card-img-top" class="img-responsive" src="{{photo.image.url}}" data-target="#extraModal{{photo.id}}" data-toggle="modal" size="100px200">
+      <img class="card-img-top" class="img-responsive" src="{{image.image.url}}" data-target="#extraModal{{image.id}}" data-toggle="modal" size="100px200">
     </div>
     {%endfor%}
   </div>
@@ -19,29 +19,29 @@
 </div>
 
 
-{% for photo in photos%}
+{% for image in images%}
 
   <!-- Modal -->
-  <div class="modal fade" id="extraModal{{photo.id}}" tabindex="-1" role="dialog" aria-labelledby="extra" aria-hidden="true">
+  <div class="modal fade" id="extraModal{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="extra" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">Title: {{photo.name}}</h5>
+          <h5 class="modal-title" id="exampleModalLongTitle">Title: {{image.name}}</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
         </div>
 
         <div class="modal-body">
-          <img class="card-img-top" class="img-responsive" src="{{photo.image.url}}" size="100px200">
-          <p>Details: {{photo.description}}</p>
-          <p class="description-body"><span class="badge"> <i class="fas fa-map-marker-alt"></i> {{photo.location}}</span></p>
+          <img class="card-img-top" class="img-responsive" src="{{image.image.url}}" size="100px200">
+          <p>Details: {{image.description}}</p>
+          <p class="description-body"><span class="badge"> <i class="fas fa-map-marker-alt"></i> {{image.location}}</span></p>
           <!-- {% for category in categories.all %} -->
-          <p> Category: {{ photo.category }} </p>
+          <p> Category: {{ image.category }} </p>
           <!-- {% endfor %} -->
-          <small style="font-size: 12px" class="ml-45"><i class="far fa-clock"></i> {{photo.post_date | timesince}} ago</small> 
+          <small style="font-size: 12px" class="ml-45"><i class="far fa-clock"></i> {{image.post_date | timesince}} ago</small> 
           <!-- copy to clip board-->
 
-          <button type="button" name="button" class="btn btn-secondary" value="{{photo.image.url}}" onclick="copylink(this.value)">Copy Image Link</button>
+          <button type="button" name="button" class="btn btn-secondary" value="{{image.image.url}}" onclick="copylink(this.value)">Copy Image Link</button>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
