--- a/gallery/templates/details.html
+++ b/gallery/templates/details.html
@@ -13,9 +13,9 @@
     <div class="card-body">
       <p>Details: {{image.description}}</p>
       <p class="description-body"><span class="badge"> <i class="fas fa-map-marker-alt"></i> {{image.location}}</span></p>
-      <small style="font-size: 12px" class=""><i class="far fa-clock"></i> {{photo.post_date | timesince}} ago</small> 
+      <small style="font-size: 12px" class=""><i class="far fa-clock"></i> {{image.post_date | timesince}} ago</small> 
       {% for category in image.categories.all %}
-      <p> Category: {{ category.cat_name }} </p>
+      <p> Category: {{ image.categories}} </p>
       {% endfor %}
     </div>
 
